# neuro-provenance-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
classifier_benchmark/: __init__.py  csp_features.py  model.py  train_eval.py
connectivity_analysis/: __init__.py  granger_causality.py  spectral_coherence.py
dim_reduction_viz/: __init__.py  interactive_viz.py  population_simulation.py  reduce.py
eeg_preprocessing/: __init__.py  ica_utils.py  pipeline.py
encoding_models/: __init__.py  glm_fit.py  lnp_simulation.py  receptive_field_baseline.py
provenance_pipeline/: __init__.py  guardrail.py  propagation.py  tainted_array.py
spiking_networks/: __init__.py  lif_decision_network.py  raster_viz.py  surrogate_gradient_snn.py
utils_and_tests/: __init__.py  conftest.py  shared_types.py  synthetic_data.py  test_classifier_benchmark.py  test_connectivity_analysis.py  test_dim_reduction_viz.py  test_eeg_preprocessing.py  test_encoding_models.py  test_provenance_pipeline.py  test_spiking_networks.py
