[project]
name = "neuro-provenance-toolkit"
version = "0.1.0"
description = "Computational neuroscience portfolio: EEG/spike pipelines with provenance-aware contamination tracking."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "mne",
    "torch",
    "brian2",
    "matplotlib",
]

[project.optional-dependencies]
viz = ["plotly", "umap-learn"]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["utils_and_tests"]
